Bug Fix: Show menu on mobile devices.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Super Minimal
 Author: Brandon Eleuterio
 Author URI:     https://eleuterio.org/
 Description: A light-weight, simple, minimal blog template
-Version: 0.0.9
+Version: 0.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: super-minimal
@@ -238,7 +238,7 @@ img {
 }
 
 .main-navigation ul {
-  display: none;
+  display: block;
   list-style: none;
   margin: 0;
   padding-left: 0;
